--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debt Collection Agency</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
@@ -54,17 +55,17 @@
                             <path d="M155.109 0L153.903 3.40028C153.75 3.85194 153.619 4.34219 153.466 4.81315H153.419C153.266 4.34219 153.131 3.85194 152.977 3.40028L151.733 0H149.842V7.65314H151.397V4.8446C151.397 4.09854 151.257 2.9851 151.175 2.24449H151.222L151.834 4.05576L152.92 6.9876H153.883L154.967 4.05576L155.596 2.24449H155.643C155.561 2.9851 155.421 4.09854 155.421 4.8446V7.65314H157V0H155.109Z" fill="#1C5E8E"/>
                         </svg>
                     </div>
-                    <div class="cell auto medium-offset-3">
+                    <div class="cell auto medium-offset-2">
                         <div class="grid-x grid-padding-x">
                             
                             <div class="cell shrink">
-                                <a href="">Debt Solutions</a>
+                                <a href="">Debt Solutions <i class="fas fa-chevron-down"></i></a>
                             </div>
                             <div class="cell shrink">
-                                <a href="">Debt Problems</a>
+                                <a href="">Debt Problems <i class="fas fa-chevron-down"></i></a>
                             </div>
                             <div class="cell shrink">
-                                <a href="">Business Debts</a>
+                                <a href="">Business Debts <i class="fas fa-chevron-down"></i></a>
                             </div>
                             <div class="cell shrink">
                                 <a href="">Help Centre</a>
